[gd_scene load_steps=30 format=4 uid="uid://70r4foco2wx6"]

[ext_resource type="AudioStream" uid="uid://bjhitw7wq3gvc" path="res://audio/notes/note_D4.mp3" id="1_ch6k7"]
[ext_resource type="AudioStream" uid="uid://c7euudyy74jrn" path="res://audio/notes/note_E4.mp3" id="2_07s3g"]
[ext_resource type="AudioStream" uid="uid://dt4tghalqaq4l" path="res://audio/notes/note_F4.mp3" id="3_5gr6j"]
[ext_resource type="AudioStream" uid="uid://cxokfftd56j3l" path="res://audio/notes/note_G4.mp3" id="4_ejs6v"]
[ext_resource type="AudioStream" uid="uid://bttwg0unrg0nu" path="res://audio/notes/note_A4.mp3" id="5_yiqpf"]
[ext_resource type="AudioStream" uid="uid://ddicwefdc66ev" path="res://audio/notes/note_B4.mp3" id="6_o6xrs"]
[ext_resource type="AudioStream" uid="uid://b2v28cgjk5y0i" path="res://audio/notes/note_C5.mp3" id="7_yu636"]
[ext_resource type="Texture2D" uid="uid://cl2gfonwfdlht" path="res://assets/underworld/groundTilemap_64px.png" id="8_8k75g"]
[ext_resource type="AudioStream" uid="uid://c55psxpw1gg4g" path="res://audio/notes/note_D5.mp3" id="8_gvh0v"]
[ext_resource type="AudioStream" uid="uid://i1mtocf62h3" path="res://audio/notes/note_E5.mp3" id="9_t6jmp"]
[ext_resource type="Texture2D" uid="uid://cod63u1s5t56m" path="res://assets/UI/health/health meter-02.png" id="11_ejs6v"]
[ext_resource type="Script" uid="uid://7gpcl0egxvam" path="res://scripts/Lyre.gd" id="11_v32h4"]
[ext_resource type="Texture2D" uid="uid://dsjxh5rtwxgdf" path="res://assets/UI/health/health meter-05.png" id="12_yiqpf"]
[ext_resource type="Texture2D" uid="uid://cw4kreh8g58qj" path="res://assets/underworld/Parallax_Backgrounds_Cave/7.png" id="13_cl2ps"]
[ext_resource type="Texture2D" uid="uid://drlbyab7v4rvv" path="res://assets/underworld/Parallax_Backgrounds_Cave/6.png" id="14_6wuwv"]
[ext_resource type="Texture2D" uid="uid://bquqknjvh7b3i" path="res://assets/underworld/Parallax_Backgrounds_Cave/5.png" id="15_0lq6g"]
[ext_resource type="Texture2D" uid="uid://cddpyatqt2452" path="res://assets/underworld/LavaBackground1.png" id="15_5leld"]
[ext_resource type="Texture2D" uid="uid://wxxr1ovtntse" path="res://assets/underworld/Parallax_Backgrounds_Cave/4.png" id="16_5leld"]
[ext_resource type="Texture2D" uid="uid://bxd2wcxc1ne6g" path="res://assets/underworld/Parallax_Backgrounds_Cave/3.png" id="17_slb70"]
[ext_resource type="Texture2D" uid="uid://pv8ow628uaut" path="res://assets/underworld/Parallax_Backgrounds_Cave/2.png" id="18_v32h4"]
[ext_resource type="PackedScene" uid="uid://dmcc2lfqiui3k" path="res://scenes/orpheus.tscn" id="19_6wuwv"]
[ext_resource type="Texture2D" uid="uid://cspnh7474kvmp" path="res://assets/underworld/Parallax_Backgrounds_Cave/1.png" id="22_slb70"]
[ext_resource type="Script" uid="uid://clk44r7qwj2pf" path="res://scripts/WispSpawner.gd" id="23_4lw23"]
[ext_resource type="PackedScene" uid="uid://42gg2j7ltovb" path="res://scenes/charon.tscn" id="23_v32h4"]
[ext_resource type="PackedScene" uid="uid://dwqig888co6yn" path="res://scenes/wisp.tscn" id="24_4lw23"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8x47n"]
texture = ExtResource("8_8k75g")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
2:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
20:11/0 = 0
21:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
19:12/0 = 0
20:12/0 = 0
21:12/0 = 0
22:12/0 = 0
23:12/0 = 0
24:12/0 = 0
25:12/0 = 0
26:12/0 = 0
27:12/0 = 0
28:12/0 = 0
29:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
18:13/0 = 0
19:13/0 = 0
20:13/0 = 0
21:13/0 = 0
22:13/0 = 0
23:13/0 = 0
24:13/0 = 0
25:13/0 = 0
26:13/0 = 0
27:13/0 = 0
28:13/0 = 0
29:13/0 = 0
5:14/0 = 0
6:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
20:14/0 = 0
21:14/0 = 0
22:14/0 = 0
23:14/0 = 0
24:14/0 = 0
25:14/0 = 0
26:14/0 = 0
27:14/0 = 0
28:14/0 = 0
29:14/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
20:15/0 = 0
21:15/0 = 0
22:15/0 = 0
23:15/0 = 0
24:15/0 = 0
25:15/0 = 0
26:15/0 = 0
27:15/0 = 0
28:15/0 = 0

[sub_resource type="TileSet" id="TileSet_fw75y"]
sources/0 = SubResource("TileSetAtlasSource_8x47n")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8k75g"]
texture = ExtResource("8_8k75g")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
2:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
20:11/0 = 0
21:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
19:12/0 = 0
20:12/0 = 0
21:12/0 = 0
22:12/0 = 0
23:12/0 = 0
24:12/0 = 0
25:12/0 = 0
26:12/0 = 0
27:12/0 = 0
28:12/0 = 0
29:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
18:13/0 = 0
19:13/0 = 0
20:13/0 = 0
21:13/0 = 0
22:13/0 = 0
23:13/0 = 0
24:13/0 = 0
25:13/0 = 0
26:13/0 = 0
27:13/0 = 0
28:13/0 = 0
29:13/0 = 0
5:14/0 = 0
6:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
20:14/0 = 0
21:14/0 = 0
22:14/0 = 0
23:14/0 = 0
24:14/0 = 0
25:14/0 = 0
26:14/0 = 0
27:14/0 = 0
28:14/0 = 0
29:14/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
20:15/0 = 0
21:15/0 = 0
22:15/0 = 0
23:15/0 = 0
24:15/0 = 0
25:15/0 = 0
26:15/0 = 0
27:15/0 = 0
28:15/0 = 0

[sub_resource type="TileSet" id="TileSet_8x47n"]
sources/0 = SubResource("TileSetAtlasSource_8k75g")

[node name="Underworld" type="Node2D"]

[node name="Background" type="ParallaxBackground" parent="."]

[node name="OriginalParallaxBackgroundLayer" type="ParallaxLayer" parent="Background"]
visible = false
texture_filter = 1
motion_mirroring = Vector2(768, 0)

[node name="Sprite2D" type="Sprite2D" parent="Background/OriginalParallaxBackgroundLayer"]
texture_filter = 1
texture = ExtResource("13_cl2ps")

[node name="Sprite2D2" type="Sprite2D" parent="Background/OriginalParallaxBackgroundLayer"]
texture_filter = 1
position = Vector2(384, 0)
texture = ExtResource("13_cl2ps")

[node name="NewParallaxBackgroundLayer" type="ParallaxLayer" parent="Background"]
texture_filter = 1
motion_scale = Vector2(0.2, 1)
motion_mirroring = Vector2(768, 0)

[node name="Sprite2D" type="Sprite2D" parent="Background/NewParallaxBackgroundLayer"]
texture_filter = 1
position = Vector2(5.9604645e-07, 1.4305115e-06)
scale = Vector2(0.88888884, 0.90000004)
texture = ExtResource("15_5leld")

[node name="Sprite2D2" type="Sprite2D" parent="Background/NewParallaxBackgroundLayer"]
texture_filter = 1
position = Vector2(384, -1.4305115e-06)
scale = Vector2(0.8888889, 0.90000004)
texture = ExtResource("15_5leld")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="Background"]
visible = false
texture_filter = 1
motion_mirroring = Vector2(768, 0)

[node name="Sprite2D" type="Sprite2D" parent="Background/ParallaxLayer2"]
texture_filter = 1
texture = ExtResource("14_6wuwv")

[node name="Sprite2D2" type="Sprite2D" parent="Background/ParallaxLayer2"]
texture_filter = 1
position = Vector2(384, 0)
texture = ExtResource("14_6wuwv")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="Background"]
visible = false
texture_filter = 1
motion_mirroring = Vector2(768, 0)

[node name="Sprite2D" type="Sprite2D" parent="Background/ParallaxLayer3"]
texture_filter = 1
texture = ExtResource("15_0lq6g")

[node name="Sprite2D2" type="Sprite2D" parent="Background/ParallaxLayer3"]
texture_filter = 1
position = Vector2(384, 0)
texture = ExtResource("15_0lq6g")

[node name="ParallaxLayer4" type="ParallaxLayer" parent="Background"]
texture_filter = 1
motion_scale = Vector2(0.6, 1)
motion_mirroring = Vector2(768, 0)

[node name="Sprite2D" type="Sprite2D" parent="Background/ParallaxLayer4"]
texture_filter = 1
texture = ExtResource("16_5leld")

[node name="Sprite2D2" type="Sprite2D" parent="Background/ParallaxLayer4"]
texture_filter = 1
position = Vector2(384, 0)
texture = ExtResource("16_5leld")

[node name="ParallaxLayer5" type="ParallaxLayer" parent="Background"]
texture_filter = 1
motion_mirroring = Vector2(768, 0)

[node name="Sprite2D" type="Sprite2D" parent="Background/ParallaxLayer5"]
texture_filter = 1
texture = ExtResource("17_slb70")

[node name="Sprite2D2" type="Sprite2D" parent="Background/ParallaxLayer5"]
texture_filter = 1
position = Vector2(384, 0)
texture = ExtResource("17_slb70")

[node name="ParallaxLayer6" type="ParallaxLayer" parent="Background"]
texture_filter = 1
motion_scale = Vector2(1.6, 1)
motion_mirroring = Vector2(768, 0)

[node name="Sprite2D" type="Sprite2D" parent="Background/ParallaxLayer6"]
texture_filter = 1
texture = ExtResource("18_v32h4")

[node name="Sprite2D2" type="Sprite2D" parent="Background/ParallaxLayer6"]
texture_filter = 1
position = Vector2(384, 0)
texture = ExtResource("18_v32h4")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
texture_filter = 1
tile_map_data = PackedByteArray("AAD0/wQAAAAAAAAAAAD0/wUAAAAAAAEAAAD0/wYAAAAAAAMAAAD1/wQAAAABAAAAAAD1/wUAAAABAAEAAAD1/wYAAAABAAMAAAD2/wQAAAACAAAAAAD2/wUAAAACAAEAAAD2/wYAAAACAAMAAAD3/wQAAAADAAAAAAD3/wUAAAADAAEAAAD3/wYAAAADAAMAAAD4/wQAAAAEAAAAAAD4/wUAAAAEAAEAAAD4/wYAAAAEAAMAAAD5/wQAAAAFAAAAAAD5/wUAAAAFAAEAAAD5/wYAAAAFAAMAAAD6/wQAAAAGAAAAAAD6/wUAAAAGAAEAAAD6/wYAAAAGAAMAAAD7/wQAAAAHAAAAAAD7/wUAAAAHAAEAAAD7/wYAAAAHAAMAAAD8/wQAAAAIAAAAAAD8/wUAAAAIAAEAAAD8/wYAAAAAAAMAAAD9/wQAAAAJAAAAAAD9/wUAAAAJAAEAAAD9/wYAAAABAAMAAAD+/wQAAAAKAAAAAAD+/wUAAAAKAAEAAAD+/wYAAAACAAMAAAD//wQAAAAAAAAAAAD//wUAAAAAAAEAAAD//wYAAAADAAMAAAAAAAQAAAABAAAAAAAAAAUAAAABAAEAAAAAAAYAAAAEAAMAAAABAAQAAAACAAAAAAABAAUAAAACAAEAAAABAAYAAAAFAAMAAAACAAQAAAADAAAAAAACAAUAAAADAAEAAAACAAYAAAAGAAMAAAADAAQAAAAEAAAAAAADAAUAAAAEAAEAAAADAAYAAAAHAAMAAAAEAAQAAAAFAAAAAAAEAAUAAAAFAAEAAAAEAAYAAAAAAAMAAAAFAAQAAAAGAAAAAAAFAAUAAAAGAAEAAAAFAAYAAAABAAMAAAAGAAQAAAAHAAAAAAAGAAUAAAAHAAEAAAAGAAYAAAACAAMAAAAHAAQAAAAIAAAAAAAHAAUAAAAIAAEAAAAHAAYAAAADAAMAAAAIAAQAAAAJAAAAAAAIAAUAAAAJAAEAAAAIAAYAAAAEAAMAAAAJAAQAAAAKAAAAAAAJAAUAAAAKAAEAAAAJAAYAAAAFAAMAAAAKAAQAAAAAAAAAAAAKAAUAAAAAAAEAAAAKAAYAAAAGAAMAAAALAAQAAAABAAAAAAALAAUAAAABAAEAAAALAAYAAAAHAAMAAAAMAAQAAAACAAAAAAAMAAUAAAACAAEAAAAMAAYAAAAAAAMAAAANAAQAAAADAAAAAAANAAUAAAADAAEAAAANAAYAAAABAAMAAAAOAAQAAAAEAAAAAAAOAAUAAAAEAAEAAAAOAAYAAAACAAMAAAAPAAQAAAAFAAAAAAAPAAUAAAAFAAEAAAAPAAYAAAADAAMAAAAQAAQAAAAGAAAAAAAQAAUAAAAGAAEAAAAQAAYAAAAEAAMAAAARAAQAAAAHAAAAAAARAAUAAAAHAAEAAAARAAYAAAAFAAMAAAASAAQAAAAIAAAAAAASAAUAAAAIAAEAAAASAAYAAAAGAAMAAAATAAQAAAAJAAAAAAATAAUAAAAJAAEAAAATAAYAAAAHAAMAAAAUAAQAAAAKAAAAAAAUAAUAAAAKAAEAAAAUAAYAAAAAAAMAAAAVAAQAAAAAAAAAAAAVAAUAAAAAAAEAAAAVAAYAAAABAAMAAAAWAAQAAAABAAAAAAAWAAUAAAABAAEAAAAWAAYAAAACAAMAAAAXAAQAAAACAAAAAAAXAAUAAAACAAEAAAAXAAYAAAADAAMAAAAYAAQAAAADAAAAAAAYAAUAAAADAAEAAAAYAAYAAAAEAAMAAAAZAAQAAAAEAAAAAAAZAAUAAAAEAAEAAAAZAAYAAAAFAAMAAAAaAAQAAAAFAAAAAAAaAAUAAAAFAAEAAAAaAAYAAAAGAAMAAAAbAAQAAAAGAAAAAAAbAAUAAAAGAAEAAAAbAAYAAAAHAAMAAAAcAAQAAAAHAAAAAAAcAAUAAAAHAAEAAAAcAAYAAAAAAAMAAAAdAAQAAAAIAAAAAAAdAAUAAAAIAAEAAAAdAAYAAAABAAMAAAAeAAQAAAAJAAAAAAAeAAUAAAAJAAEAAAAeAAYAAAACAAMAAAAfAAQAAAAKAAAAAAAfAAUAAAAKAAEAAAAfAAYAAAADAAMAAAAgAAQAAAAAAAAAAAAgAAUAAAAAAAEAAAAgAAYAAAAEAAMAAAAhAAQAAAABAAAAAAAhAAUAAAABAAEAAAAhAAYAAAAFAAMAAAAiAAQAAAACAAAAAAAiAAUAAAACAAEAAAAiAAYAAAAGAAMAAAAjAAQAAAADAAAAAAAjAAUAAAADAAEAAAAjAAYAAAAHAAMAAAAkAAQAAAAEAAAAAAAkAAUAAAAEAAEAAAAkAAYAAAAAAAMAAAAlAAQAAAAFAAAAAAAlAAUAAAAFAAEAAAAlAAYAAAABAAMAAAAmAAQAAAAGAAAAAAAmAAUAAAAGAAEAAAAmAAYAAAACAAMAAAAnAAQAAAAHAAAAAAAnAAUAAAAHAAEAAAAnAAYAAAADAAMAAAAoAAQAAAAIAAAAAAAoAAUAAAAIAAEAAAAoAAYAAAAEAAMAAAApAAQAAAAJAAAAAAApAAUAAAAJAAEAAAApAAYAAAAFAAMAAAAqAAQAAAAKAAAAAAAqAAUAAAAKAAEAAAAqAAYAAAAGAAMAAAArAAQAAAAAAAAAAAArAAUAAAAAAAEAAAArAAYAAAAHAAMAAAAsAAQAAAABAAAAAAAsAAUAAAABAAEAAAAsAAYAAAAAAAMAAAAtAAQAAAACAAAAAAAtAAUAAAACAAEAAAAtAAYAAAABAAMAAAAuAAQAAAADAAAAAAAuAAUAAAADAAEAAAAuAAYAAAACAAMAAAAvAAQAAAAEAAAAAAAvAAUAAAAEAAEAAAAvAAYAAAADAAMAAAAwAAQAAAAFAAAAAAAwAAUAAAAFAAEAAAAwAAYAAAAEAAMAAAAxAAQAAAAGAAAAAAAxAAUAAAAGAAEAAAAxAAYAAAAFAAMAAAAyAAQAAAAHAAAAAAAyAAUAAAAHAAEAAAAyAAYAAAAGAAMAAAAzAAQAAAAIAAAAAAAzAAUAAAAIAAEAAAAzAAYAAAAHAAMAAAA0AAQAAAAJAAAAAAA0AAUAAAAJAAEAAAA0AAYAAAAAAAMAAAA1AAQAAAAKAAAAAAA1AAUAAAAKAAEAAAA1AAYAAAABAAMAAAA2AAQAAAAAAAAAAAA2AAUAAAAAAAEAAAA2AAYAAAACAAMAAAA3AAQAAAABAAAAAAA3AAUAAAABAAEAAAA3AAYAAAADAAMAAAA4AAQAAAACAAAAAAA4AAUAAAACAAEAAAA4AAYAAAAEAAMAAAA5AAQAAAADAAAAAAA5AAUAAAADAAEAAAA5AAYAAAAFAAMAAAA6AAQAAAAEAAAAAAA6AAUAAAAEAAEAAAA6AAYAAAAGAAMAAAA7AAQAAAAFAAAAAAA7AAUAAAAFAAEAAAA7AAYAAAAHAAMAAAA8AAQAAAAGAAAAAAA8AAUAAAAGAAEAAAA8AAYAAAAAAAMAAAA9AAQAAAAHAAAAAAA9AAUAAAAHAAEAAAA9AAYAAAABAAMAAAA+AAQAAAAIAAAAAAA+AAUAAAAIAAEAAAA+AAYAAAACAAMAAAA/AAQAAAAJAAAAAAA/AAUAAAAJAAEAAAA/AAYAAAADAAMAAABAAAQAAAAKAAAAAABAAAUAAAAKAAEAAABAAAYAAAAEAAMAAABBAAQAAAAAAAAAAABBAAUAAAAAAAEAAABBAAYAAAAFAAMAAABCAAQAAAABAAAAAABCAAUAAAABAAEAAABCAAYAAAAGAAMAAABDAAQAAAACAAAAAABDAAUAAAACAAEAAABDAAYAAAAHAAMAAABEAAQAAAADAAAAAABEAAUAAAADAAEAAABEAAYAAAAAAAMAAABFAAQAAAAEAAAAAABFAAUAAAAEAAEAAABFAAYAAAABAAMAAABGAAQAAAAFAAAAAABGAAUAAAAFAAEAAABGAAYAAAACAAMAAABHAAQAAAAGAAAAAABHAAUAAAAGAAEAAABHAAYAAAADAAMAAABIAAQAAAAHAAAAAABIAAUAAAAHAAEAAABIAAYAAAAEAAMAAABJAAQAAAAIAAAAAABJAAUAAAAIAAEAAABJAAYAAAAFAAMAAABKAAQAAAAJAAAAAABKAAUAAAAJAAEAAABKAAYAAAAGAAMAAABLAAQAAAAKAAAAAABLAAUAAAAKAAEAAABLAAYAAAAHAAMAAABMAAQAAAAAAAAAAABMAAUAAAAAAAEAAABMAAYAAAAAAAMAAABNAAQAAAABAAAAAABNAAUAAAABAAEAAABNAAYAAAABAAMAAABOAAQAAAACAAAAAABOAAUAAAACAAEAAABOAAYAAAACAAMAAABPAAQAAAADAAAAAABPAAUAAAADAAEAAABPAAYAAAADAAMAAABQAAQAAAAEAAAAAABQAAUAAAAEAAEAAABQAAYAAAAEAAMAAABRAAQAAAAFAAAAAABRAAUAAAAFAAEAAABRAAYAAAAFAAMAAABSAAQAAAAGAAAAAABSAAUAAAAGAAEAAABSAAYAAAAGAAMAAABTAAQAAAAHAAAAAABTAAUAAAAHAAEAAABTAAYAAAAHAAMAAABUAAQAAAAIAAAAAABUAAUAAAAIAAEAAABUAAYAAAAAAAMAAABVAAQAAAAJAAAAAABVAAUAAAAJAAEAAABVAAYAAAABAAMAAABWAAQAAAAKAAAAAABWAAUAAAAKAAEAAABWAAYAAAACAAMAAADp/wQAAAAAAAAAAADp/wUAAAAAAAEAAADp/wYAAAAFAAMAAADq/wQAAAABAAAAAADq/wUAAAABAAEAAADq/wYAAAAGAAMAAADr/wQAAAACAAAAAADr/wUAAAACAAEAAADr/wYAAAAHAAMAAADs/wQAAAADAAAAAADs/wUAAAADAAEAAADs/wYAAAAAAAMAAADt/wQAAAAEAAAAAADt/wUAAAAEAAEAAADt/wYAAAABAAMAAADu/wQAAAAFAAAAAADu/wUAAAAFAAEAAADu/wYAAAACAAMAAADv/wQAAAAGAAAAAADv/wUAAAAGAAEAAADv/wYAAAADAAMAAADw/wQAAAAHAAAAAADw/wUAAAAHAAEAAADw/wYAAAAEAAMAAADx/wQAAAAIAAAAAADx/wUAAAAIAAEAAADx/wYAAAAFAAMAAADy/wQAAAAJAAAAAADy/wUAAAAJAAEAAADy/wYAAAAGAAMAAADz/wQAAAAKAAAAAADz/wUAAAAKAAEAAADz/wYAAAAHAAMAAABXAAYAAAADAAMAAABYAAYAAAAEAAMAAABZAAYAAAAFAAMAAABaAAYAAAAGAAMAAABbAAYAAAAHAAMAAABcAAYAAAAAAAMAAABdAAYAAAABAAMAAABeAAYAAAACAAMAAABfAAYAAAADAAMAAABgAAYAAAAEAAMAAABhAAYAAAAFAAMAAABiAAYAAAAGAAMAAABjAAYAAAAHAAMAAABkAAYAAAAAAAMAAABlAAYAAAABAAMAAABmAAYAAAACAAMAAABnAAYAAAADAAMAAABoAAYAAAAEAAMAAABpAAYAAAAFAAMAAABqAAYAAAAGAAMAAABrAAYAAAAHAAMAAABsAAYAAAAAAAMAAABtAAYAAAABAAMAAABuAAYAAAACAAMAAABvAAYAAAADAAMAAABwAAYAAAAEAAMAAABxAAYAAAAFAAMAAAByAAYAAAAGAAMAAABzAAYAAAAHAAMAAAB0AAYAAAAAAAMAAAB1AAYAAAABAAMAAAB2AAYAAAACAAMAAABXAAQAAAAAAAAAAABXAAUAAAAAAAEAAABYAAQAAAABAAAAAABYAAUAAAABAAEAAABZAAQAAAACAAAAAABZAAUAAAACAAEAAABaAAQAAAADAAAAAABaAAUAAAADAAEAAABbAAQAAAAEAAAAAABbAAUAAAAEAAEAAABcAAQAAAAFAAAAAABcAAUAAAAFAAEAAABdAAQAAAAGAAAAAABdAAUAAAAGAAEAAABeAAQAAAAHAAAAAABeAAUAAAAHAAEAAABfAAQAAAAIAAAAAABfAAUAAAAIAAEAAABgAAQAAAAJAAAAAABgAAUAAAAJAAEAAABhAAQAAAAKAAAAAABhAAUAAAAKAAEAAABiAAQAAAAAAAAAAABiAAUAAAAAAAEAAABjAAQAAAABAAAAAABjAAUAAAABAAEAAABkAAQAAAACAAAAAABkAAUAAAACAAEAAABlAAQAAAADAAAAAABlAAUAAAADAAEAAABmAAQAAAAEAAAAAABmAAUAAAAEAAEAAABnAAQAAAAFAAAAAABnAAUAAAAFAAEAAABoAAQAAAAGAAAAAABoAAUAAAAGAAEAAABpAAQAAAAHAAAAAABpAAUAAAAHAAEAAABqAAQAAAAIAAAAAABqAAUAAAAIAAEAAABrAAQAAAAJAAAAAABrAAUAAAAJAAEAAABsAAQAAAAKAAAAAABsAAUAAAAKAAEAAABtAAQAAAAAAAAAAABtAAUAAAAAAAEAAABuAAQAAAABAAAAAABuAAUAAAABAAEAAABvAAQAAAACAAAAAABvAAUAAAACAAEAAABwAAQAAAADAAAAAABwAAUAAAADAAEAAABxAAQAAAAEAAAAAABxAAUAAAAEAAEAAAByAAQAAAAFAAAAAAByAAUAAAAFAAEAAABzAAQAAAAGAAAAAABzAAUAAAAGAAEAAAB0AAQAAAAHAAAAAAB0AAUAAAAHAAEAAAB1AAQAAAAIAAAAAAB1AAUAAAAIAAEAAAB2AAQAAAAJAAAAAAB2AAUAAAAJAAEAAAB5AAQAAAAOAAgAAAB5AAUAAAAOAAkAAAB5AAYAAAAJAAMAAAB5AAcAAAAOAAsAAAB5AAgAAAAOAAwAAAB5AAkAAAAOAA0AAAB5AAoAAAAOAA4AAAB5AAsAAAAOAA8AAAB6AAQAAAAPAAgAAAB6AAUAAAAPAAkAAAB6AAYAAAAKAAMAAAB6AAcAAAAPAAsAAAB6AAgAAAAPAAwAAAB6AAkAAAAPAA0AAAB6AAoAAAAPAA4AAAB6AAsAAAAPAA8AAAB7AAUAAAAQAAkAAAB7AAYAAAAQAAoAAAB7AAcAAAAQAAsAAAB7AAgAAAAQAAwAAAB7AAkAAAAQAA0AAAB7AAoAAAAQAA4AAAB7AAsAAAAQAA8AAAB8AAUAAAARAAkAAAB8AAYAAAARAAoAAAB8AAcAAAARAAsAAAB8AAgAAAARAAwAAAB8AAkAAAARAA0AAAB8AAoAAAARAA4AAAB8AAsAAAARAA8AAAB9AAYAAAASAAoAAAB9AAcAAAASAAsAAAB9AAgAAAASAAwAAAB9AAkAAAASAA0AAAB9AAoAAAASAA4AAAB9AAsAAAASAA8AAAB+AAcAAAATAAsAAAB+AAgAAAATAAwAAAB+AAkAAAATAA0AAAB+AAoAAAATAA4AAAB+AAsAAAATAA8AAAB/AAgAAAAUAAwAAAB/AAkAAAAUAA0AAAB/AAoAAAAUAA4AAAB/AAsAAAAUAA8AAACAAAgAAAAVAAwAAACAAAkAAAAVAA0AAACAAAoAAAAVAA4AAACAAAsAAAAVAA8AAACBAAgAAAAWAAwAAACBAAkAAAAWAA0AAACBAAoAAAAWAA4AAACBAAsAAAAWAA8AAACCAAgAAAAXAAwAAACCAAkAAAAXAA0AAACCAAoAAAAXAA4AAACCAAsAAAAXAA8AAACDAAgAAAAYAAwAAACDAAkAAAAYAA0AAACDAAoAAAAYAA4AAACDAAsAAAAYAA8AAACEAAgAAAAZAAwAAACEAAkAAAAZAA0AAACEAAoAAAAZAA4AAACEAAsAAAAZAA8AAACFAAgAAAAaAAwAAACFAAkAAAAaAA0AAACFAAoAAAAaAA4AAACFAAsAAAAaAA8AAACGAAgAAAAbAAwAAACGAAkAAAAbAA0AAACGAAoAAAAbAA4AAAB7AAQAAAAQAAgAAAB8AAQAAAARAAgAAAB9AAUAAAASAAkAAAB+AAUAAAATAAkAAAB+AAYAAAATAAoAAAB/AAYAAAAUAAoAAAB/AAcAAAAUAAsAAACAAAcAAAAVAAsAAACGAAsAAAAbAA8AAACHAAgAAAAcAAwAAACHAAkAAAAcAA0AAACHAAoAAAAcAA4AAACHAAsAAAAcAA8AAACIAAgAAAAdAAwAAACIAAkAAAAdAA0AAACIAAoAAAAdAA4AAAB3AAQAAAAMAAgAAAB3AAUAAAAMAAkAAAB3AAYAAAAHAAMAAAB3AAcAAAAMAAsAAAB3AAgAAAAMAAwAAAB3AAkAAAAMAA0AAAB3AAoAAAAMAA4AAAB3AAsAAAAMAA8AAAB4AAQAAAANAAgAAAB4AAUAAAANAAkAAAB4AAYAAAAIAAMAAAB4AAcAAAANAAsAAAB4AAgAAAANAAwAAAB4AAkAAAANAA0AAAB4AAoAAAANAA4AAAB4AAsAAAANAA8AAAA=")
tile_set = SubResource("TileSet_fw75y")

[node name="TileMapLayer2" type="TileMapLayer" parent="."]
texture_filter = 1
tile_map_data = PackedByteArray("AAB3AAYAAAAEAAMAAAB3AAcAAAAEAAQAAAB3AAgAAAAEAAUAAAB3AAkAAAAEAAYAAAB3AAoAAAAEAAcAAAB3AAsAAAAEAAgAAAB4AAYAAAAFAAMAAAB4AAcAAAAFAAQAAAB4AAgAAAAFAAUAAAB4AAkAAAAFAAYAAAB4AAoAAAAFAAcAAAB4AAsAAAAFAAgAAAB5AAYAAAAGAAMAAAB5AAcAAAAGAAQAAAB5AAgAAAAGAAUAAAB5AAkAAAAGAAYAAAB5AAoAAAAGAAcAAAB5AAsAAAAGAAgAAAB6AAYAAAAHAAMAAAB6AAcAAAAHAAQAAAB6AAgAAAAHAAUAAAB6AAkAAAAHAAYAAAB6AAoAAAAHAAcAAAB6AAsAAAAHAAgAAAB7AAYAAAAIAAMAAAB7AAcAAAAIAAQAAAB7AAgAAAAIAAUAAAB7AAkAAAAIAAYAAAB7AAoAAAAIAAcAAAB7AAsAAAAIAAgAAAB8AAYAAAAJAAMAAAB8AAcAAAAJAAQAAAB8AAgAAAAJAAUAAAB8AAkAAAAJAAYAAAB8AAoAAAAJAAcAAAB8AAsAAAAJAAgAAAB9AAYAAAAEAAMAAAB9AAcAAAAEAAQAAAB9AAgAAAAEAAUAAAB9AAkAAAAEAAYAAAB9AAoAAAAEAAcAAAB9AAsAAAAEAAgAAAB+AAYAAAAFAAMAAAB+AAcAAAAFAAQAAAB+AAgAAAAFAAUAAAB+AAkAAAAFAAYAAAB+AAoAAAAFAAcAAAB+AAsAAAAFAAgAAAB/AAYAAAAGAAMAAAB/AAcAAAAGAAQAAAB/AAgAAAAGAAUAAAB/AAkAAAAGAAYAAAB/AAoAAAAGAAcAAAB/AAsAAAAGAAgAAACAAAYAAAAHAAMAAACAAAcAAAAHAAQAAACAAAgAAAAHAAUAAACAAAkAAAAHAAYAAACAAAoAAAAHAAcAAACAAAsAAAAHAAgAAACBAAYAAAAIAAMAAACBAAcAAAAIAAQAAACBAAgAAAAIAAUAAACBAAkAAAAIAAYAAACBAAoAAAAIAAcAAACBAAsAAAAIAAgAAACCAAYAAAAJAAMAAACCAAcAAAAJAAQAAACCAAgAAAAJAAUAAACCAAkAAAAJAAYAAACCAAoAAAAJAAcAAACCAAsAAAAJAAgAAACDAAYAAAAEAAMAAACDAAcAAAAEAAQAAACDAAgAAAAEAAUAAACDAAkAAAAEAAYAAACDAAoAAAAEAAcAAACDAAsAAAAEAAgAAACEAAYAAAAFAAMAAACEAAcAAAAFAAQAAACEAAgAAAAFAAUAAACEAAkAAAAFAAYAAACEAAoAAAAFAAcAAACEAAsAAAAFAAgAAACFAAYAAAAGAAMAAACFAAcAAAAGAAQAAACFAAgAAAAGAAUAAACFAAkAAAAGAAYAAACFAAoAAAAGAAcAAACFAAsAAAAGAAgAAACGAAYAAAAHAAMAAACGAAcAAAAHAAQAAACGAAgAAAAHAAUAAACGAAkAAAAHAAYAAACGAAoAAAAHAAcAAACGAAsAAAAHAAgAAACHAAYAAAAIAAMAAACHAAcAAAAIAAQAAACHAAgAAAAIAAUAAACHAAkAAAAIAAYAAACHAAoAAAAIAAcAAACHAAsAAAAIAAgAAACIAAYAAAAJAAMAAACIAAcAAAAJAAQAAACIAAgAAAAJAAUAAACIAAkAAAAJAAYAAACIAAoAAAAJAAcAAACIAAsAAAAJAAgAAACJAAYAAAAEAAMAAACJAAcAAAAEAAQAAACJAAgAAAAEAAUAAACJAAkAAAAEAAYAAACJAAoAAAAEAAcAAACJAAsAAAAEAAgAAACKAAYAAAAFAAMAAACKAAcAAAAFAAQAAACKAAgAAAAFAAUAAACKAAkAAAAFAAYAAACKAAoAAAAFAAcAAACKAAsAAAAFAAgAAACLAAYAAAAGAAMAAACLAAcAAAAGAAQAAACLAAgAAAAGAAUAAACLAAkAAAAGAAYAAACLAAoAAAAGAAcAAACLAAsAAAAGAAgAAACMAAYAAAAHAAMAAACMAAcAAAAHAAQAAACMAAgAAAAHAAUAAACMAAkAAAAHAAYAAACMAAoAAAAHAAcAAACMAAsAAAAHAAgAAACNAAYAAAAIAAMAAACNAAcAAAAIAAQAAACNAAgAAAAIAAUAAACNAAkAAAAIAAYAAACNAAoAAAAIAAcAAACNAAsAAAAIAAgAAACOAAYAAAAJAAMAAACOAAcAAAAJAAQAAACOAAgAAAAJAAUAAACOAAkAAAAJAAYAAACOAAoAAAAJAAcAAACOAAsAAAAJAAgAAACPAAYAAAAEAAMAAACPAAcAAAAEAAQAAACPAAgAAAAEAAUAAACPAAkAAAAEAAYAAACPAAoAAAAEAAcAAACPAAsAAAAEAAgAAACQAAYAAAAFAAMAAACQAAcAAAAFAAQAAACQAAgAAAAFAAUAAACQAAkAAAAFAAYAAACQAAoAAAAFAAcAAACQAAsAAAAFAAgAAACRAAYAAAAGAAMAAACRAAcAAAAGAAQAAACRAAgAAAAGAAUAAACRAAkAAAAGAAYAAACRAAoAAAAGAAcAAACRAAsAAAAGAAgAAACSAAYAAAAHAAMAAACSAAcAAAAHAAQAAACSAAgAAAAHAAUAAACSAAkAAAAHAAYAAACSAAoAAAAHAAcAAACSAAsAAAAHAAgAAACTAAYAAAAIAAMAAACTAAcAAAAIAAQAAACTAAgAAAAIAAUAAACTAAkAAAAIAAYAAACTAAoAAAAIAAcAAACTAAsAAAAIAAgAAACUAAYAAAAJAAMAAACUAAcAAAAJAAQAAACUAAgAAAAJAAUAAACUAAkAAAAJAAYAAACUAAoAAAAJAAcAAACUAAsAAAAJAAgAAAA=")
tile_set = SubResource("TileSet_8x47n")

[node name="Foreground" type="ParallaxBackground" parent="."]
layer = 1

[node name="ParallaxLayer" type="ParallaxLayer" parent="Foreground"]
motion_scale = Vector2(2, 1)
motion_mirroring = Vector2(768, 0)

[node name="Sprite2D" type="Sprite2D" parent="Foreground/ParallaxLayer"]
texture_filter = 1
texture = ExtResource("22_slb70")

[node name="Sprite2D2" type="Sprite2D" parent="Foreground/ParallaxLayer"]
texture_filter = 1
position = Vector2(384, 0)
texture = ExtResource("22_slb70")

[node name="Lyre" type="Node" parent="."]
script = ExtResource("11_v32h4")

[node name="note_D4" type="AudioStreamPlayer2D" parent="Lyre"]
stream = ExtResource("1_ch6k7")

[node name="note_E4" type="AudioStreamPlayer2D" parent="Lyre"]
stream = ExtResource("2_07s3g")

[node name="note_F4" type="AudioStreamPlayer2D" parent="Lyre"]
stream = ExtResource("3_5gr6j")

[node name="note_G4" type="AudioStreamPlayer2D" parent="Lyre"]
stream = ExtResource("4_ejs6v")

[node name="note_A4" type="AudioStreamPlayer2D" parent="Lyre"]
stream = ExtResource("5_yiqpf")

[node name="note_B4" type="AudioStreamPlayer2D" parent="Lyre"]
stream = ExtResource("6_o6xrs")

[node name="note_C5" type="AudioStreamPlayer2D" parent="Lyre"]
stream = ExtResource("7_yu636")

[node name="note_D5" type="AudioStreamPlayer2D" parent="Lyre"]
stream = ExtResource("8_gvh0v")

[node name="note_E5" type="AudioStreamPlayer2D" parent="Lyre"]
stream = ExtResource("9_t6jmp")

[node name="Orpheus" parent="." instance=ExtResource("19_6wuwv")]
position = Vector2(-165.00002, 25)

[node name="Charon" parent="." instance=ExtResource("23_v32h4")]
position = Vector2(-26, 53)

[node name="WispSpawner" type="Node2D" parent="."]
script = ExtResource("23_4lw23")
orpheus_path = NodePath("../Orpheus")
wisp_scene = ExtResource("24_4lw23")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="CharmBar" type="TextureProgressBar" parent="CanvasLayer"]
offset_left = 400.0
offset_top = 100.0
offset_right = 1048.0
offset_bottom = 230.0
scale = Vector2(0.4, 0.407)
value = 100.0
texture_under = ExtResource("11_ejs6v")
texture_progress = ExtResource("12_yiqpf")
texture_progress_offset = Vector2(44, 44)

[node name="CharmBarLabel" type="Label" parent="CanvasLayer/CharmBar"]
layout_mode = 0
offset_left = 75.0
offset_top = 125.0
offset_right = 115.0
offset_bottom = 148.0
theme_override_font_sizes/font_size = 36
text = "0"

[node name="FailLabel" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 525.0
offset_top = 400.0
offset_right = 693.0
offset_bottom = 445.0
theme_override_font_sizes/font_size = 32
text = "You Failed!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WinLabel" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 525.0
offset_top = 400.0
offset_right = 693.0
offset_bottom = 445.0
theme_override_font_sizes/font_size = 32
text = "You Won!"
horizontal_alignment = 1
vertical_alignment = 1
